# bots

./: .gitignore  TODO.txt  discord_test.py  japanese.py  larousse_languages.json  manual.css  manual.html  manual.js  pyproject.toml  requirements.txt  robertvendbot.py  telegram_test.py  wiktionary_languages.json
manual/: manual.css  uploadmanual.sh
