[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robertvendbot"
version = "1.0.0"
description = "Telegram Bot by Robertvend"
readme = "README.md"
authors = [{name = "Robert Vanden Eynde"}]
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot",
  "requests",
  "regex",
  "pyparsing>=3",
  "tzdata",
  "openpyxl",
  "pyyaml",
  "funcoperators"
]

[project.urls]
Homepage = "https://github.com/robertvandeneynde/bots"
Repository = "https://github.com/robertvandeneynde/bots"
Source = "https://github.com/robertvandeneynde/bots"
"Bug Tracker" = "https://github.com/robertvandeneynde/bots/issues"

[tool.setuptools]
py-modules = ["robertvendbot"]

